// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text alignment center 1`] = `
<Text
  style={
    Object {
      "color": "#f59d1d",
      "paddingLeft": 5,
      "textAlign": "center",
    }
  }
>
  Hallo
</Text>
`;

exports[`Text alignment left 1`] = `
<Text
  style={
    Object {
      "color": "#f59d1d",
      "paddingLeft": 5,
      "textAlign": "left",
    }
  }
>
  Hallo
</Text>
`;

exports[`Text alignment right 1`] = `
<Text
  style={
    Object {
      "color": "#f59d1d",
      "paddingLeft": 5,
      "textAlign": "right",
    }
  }
>
  Hallo
</Text>
`;

exports[`Text color secondary 1`] = `
<Text
  style={
    Object {
      "color": "#193b5e",
      "paddingLeft": 5,
      "textAlign": "center",
    }
  }
>
  Hallo
</Text>
`;
